--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,9 +16,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+    - name: Setup Node.js 12.x
       with:
         node-version: '12.x'
-    - run: npm install
-    - run: npm test
+    - name: install and run tests
+      run: |
+        npm install
+        npm test
