--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,10 +16,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Setup Node.js 12.x
+    - uses: actions/setup-node@v1
       with:
         node-version: '12.x'
-    - name: install and run tests
-      run: |
+    - run: |
         npm install
         npm test
