--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "jest": {
     "collectCoverage": true,
     "collectCoverageFrom": [
-      "**/*.{js,jsx}",
+      "*.{js,jsx}",
       "!**/node_modules/**",
       "!**/vendor/**"
     ],
